# color_contrast_k8s

./: .gitignore  Readme.md  index.json  intro.md  k8s.yaml  run-demo.sh  setup.sh  step1.md
assets/: Dockerfile  k8s.yaml  local-registry.sh  metrics-service.sh  run-demo.sh  sync-images.sh
assets/backend/: CMakeLists.txt  Dockerfile  main.cpp  package-lock.json
assets/frontend/: Dockerfile  index.html  nginx.conf
assets/frontend/src/: main.ts
backend/: CMakeLists.txt  Dockerfile  main.cpp
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  worker.ts
